--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,5 +1,5 @@
 <style type="text/css">
-    #searchbox { display : none; }
+    #searchbox, #helptext { display : none; }
 </style>
 <ul>
 <li>stuff</li>
