--- a/www/index.new.html
+++ b/www/index.new.html
@@ -3,8 +3,25 @@
 <title>Aerith</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type='text/css'>
-    .screenshot { float: right; clear: right; }
-    
+    .screenshot { 
+        float: right;
+        clear: right;
+        font-family: sans-serif;
+        font-style: normal;
+        text-align: center;
+    }
+    .screenshot a {
+        color: #666;
+        text-decoration: none;
+    }
+    .screenshot a:hover {
+        text-decoration: underline;
+    }
+    .screenshot img { 
+        border: 2px solid black;
+        padding: 4px;
+        margin: 4px;
+    }
 </style>
 </head>
 
@@ -12,20 +29,20 @@
 <h1>Aerith: A Road Trip Slideshow Editor</h1>
 
 <p class='screenshot'><a href="images/aerith1.png"><img src="images/aerith1.small.png"/><br/>
-<i>Aerith editing a trip report</i></a>
+Aerith Splash Screen</a>
 </p>
 
 <p class='screenshot'><a href="images/aerith8.png"><img src="images/aerith8.small.png"/><br/>
-<i>Aerith viewing a slideshow</i></a>
+Editing a trip report</a>
 </p>
 
-<p>Welcome! Aerith is a Swing Mashup, or SMashup, combining three webservices:
+<p>Welcome! Aerith is a Swing Mashup, or smashup, combining three webservices:
 Google Maps, Flickr, and Yahoo's geocoding webservice to let users create, view, and share slideshows of their road trip photos. It was presented as a demo at the 2006 JavaOne conference by Richard Bair, Romain Guy, and Joshua Marinacci.
 </p>
 
-<p>The Aeirth code is ready for distribution yet, but will be soon. Portions of the Aeirth demo will be available in other projects. The mapping component will soon be in SwingLabs for easy use in other applications.</p>
+<p>The Aeirth code is not ready for distribution yet, but will be soon. Portions of the Aeirth demo will be available in other projects. The mapping component will soon be in SwingLabs for easy use in other applications.</p>
 
-<p>Please keep checking back updates by joining the mailing list
+<p>Please keep checking back for updates by joining the mailing list
 
 </body>
 </html>
