--- a/www/index.new.html
+++ b/www/index.new.html
@@ -9,6 +9,7 @@
         font-family: sans-serif;
         font-style: normal;
         text-align: center;
+        border: 0px;
     }
     .screenshot a {
         color: #666;
@@ -20,21 +21,33 @@
     .screenshot img { 
         border: 2px solid black;
         padding: 4px;
-        margin: 4px;
+        margin: 6px;
     }
 </style>
 </head>
 
 <body bgcolor="#FFFFFF" text="#000000">
-<h1>Aerith: A Road Trip Slideshow Editor</h1>
+
+<p class='screenshot'><a href="images/aerith8.png"><img src="images/aerith8.small.png"/><br/>
+Edit a trip report</a>
+</p>
+
+<p class='screenshot'><a href="images/aerith4.png"><img src="images/aerith4.small.png"/><br/>
+See a Slide Show</a>
+</p>
 
 <p class='screenshot'><a href="images/aerith1.png"><img src="images/aerith1.small.png"/><br/>
 Aerith Splash Screen</a>
 </p>
 
-<p class='screenshot'><a href="images/aerith8.png"><img src="images/aerith8.small.png"/><br/>
-Editing a trip report</a>
+<p class='screenshot'><a href="images/aerith2.png"><img src="images/aerith2.small.png"/><br/>
+Select a Task</a>
 </p>
+
+<h1>Aerith: A Road Trip Slideshow Editor</h1>
+
+
+
 
 <p>Welcome! Aerith is a Swing Mashup, or smashup, combining three webservices:
 Google Maps, Flickr, and Yahoo's geocoding webservice to let users create, view, and share slideshows of their road trip photos. It was presented as a demo at the 2006 JavaOne conference by Richard Bair, Romain Guy, and Joshua Marinacci.
