--- a/www/index.html
+++ b/www/index.html
@@ -50,12 +50,19 @@ Select a Task</a>
 
 
 <p>Welcome! Aerith is a Swing Mashup, or smashup, combining three webservices:
-Google Maps, Flickr, and Yahoo's geocoding webservice to let users create, view, and share slideshows of their road trip photos. It was presented as a demo at the 2006 JavaOne conference by Richard Bair, Romain Guy, and Joshua Marinacci.
+Google Maps, Flickr, and Yahoo's geocoding webservice to let users 
+create, view, and share slideshows of their road trip photos.
+It was presented as a demo at the 2006 JavaOne conference by 
+Richard Bair, Romain Guy, and Joshua Marinacci.
 </p>
 
-<p>The Aeirth code is not ready for distribution yet, but will be soon. Portions of the Aeirth demo will be available in other projects. The mapping component will soon be in SwingLabs for easy use in other applications.</p>
+<p>The Aeirth code is not ready for distribution yet, but will be soon. 
+Portions of the Aeirth demo will be available in other projects. 
+The mapping component will soon be in SwingLabs for easy use 
+in other applications.</p>
 
-<p>Please keep checking back for updates by joining the mailing list
+<p>Please keep checking back for updates by joining the mailing list. Code
+and movies will be coming soon</p>
 
 </body>
 </html>
