--- a/www/index.html
+++ b/www/index.html
@@ -78,6 +78,7 @@ useful:</p>
 <li>Create a binary JNLP version so you don't have to compile to test Aerith.</li>
 <li>Make the graphics and skinning stuff into a resuable theme.</li>
 <li>Provide scripts to build Aerith from the commandline or other IDEs than NetBeans</li>
+<li>Make publish send an email properly</li>
 
 </ul>
 
