--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,11 @@
         padding: 4px;
         margin: 6px;
     }
+    
+    .screenshotcontainer {
+        border: 1px solid black;
+        }
+        
     .alert {
         color: #ff0000;
         }
@@ -31,6 +36,7 @@
 
 <body bgcolor="#FFFFFF" text="#000000">
 
+<div class="screenshotcontainer">
 <p class='screenshot'><a href="images/aerith8.png"><img src="images/aerith8.small.png"/><br/>
 Edit a trip report</a>
 </p>
@@ -46,9 +52,7 @@ Aerith Splash Screen</a>
 <p class='screenshot'><a href="images/aerith2.png"><img src="images/aerith2.small.png"/><br/>
 Select a Task</a>
 </p>
-
-
-
+</div>
 
 <p>Welcome! Aerith is a Swing Mashup, or smashup, combining three webservices:
 Google Maps, Flickr, and Yahoo's geocoding webservice to let users 
