--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
     .screenshotcontainer {
         border: 1px solid black;
         width: 200px;
+        float: right;
         }
         
     .alert {
