--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
     .screenshotcontainer {
         border: 1px solid black;
         width: 200px;
-        float: right;
+        float: left;
         }
         
     .alert {
