--- a/www/index.html
+++ b/www/index.html
@@ -24,8 +24,8 @@
     
     .screenshotcontainer {
         border: 1px solid black;
-        width: 200px;
-        float: left;
+        width: 230px;
+        float: right;
         }
         
     .alert {
