--- a/www/index.html
+++ b/www/index.html
@@ -24,13 +24,14 @@
     
     .screenshotcontainer {
         border: 1px solid black;
-        width: 230px;
+        width: 260px;
         float: right;
         }
         
     .alert {
         color: #ff0000;
         }
+     h2, h3 { clear: none; }
 </style>
 </head>
 
