--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,10 @@
         color: #ff0000;
         }
      h2, h3 { clear: none; }
+     
+     .aerithcontent {
+        border: 1px solid blue;
+        }
 </style>
 </head>
 
@@ -55,7 +59,9 @@ Select a Task</a>
 </p>
 </div>
 
+<div class="aerithcontent">
 <h2 class="alert">The code is here! Get it now!</h2>
+
 <h2>Aerith: A Road Trip Slideshow Editor</h2>
 
 <p>Welcome! Aerith is a Swing Mashup, or smashup, combining three webservices:
@@ -91,7 +97,7 @@ As we discover more things to be done we will add them to this list.
 
 
 
-
+</div>
 
 
 </body>
