--- a/www/index.html
+++ b/www/index.html
@@ -31,11 +31,11 @@
     .alert {
         color: #ff0000;
         }
-     h2, h3 { clear: none; }
      
      .aerithcontent {
         border: 1px solid blue;
         }
+     .aerithcontent h2, .aerithcontent h3 { clear: none; }
 </style>
 </head>
 
