--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,9 @@
      .aerithcontent {
         border: 1px solid blue;
         }
-     .aerithcontent h2, .aerithcontent h3 { clear: none; }
+     .aerithcontent h2, .aerithcontent h3 { clear: none; 
+        width: 100%; 
+        }
 </style>
 </head>
 
