--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
         border: 1px solid blue;
         }
      .aerithcontent h2, .aerithcontent h3 { clear: none; 
-        width: 100%; 
+        width: 200px; 
         }
 </style>
 </head>
