--- a/www/index.html
+++ b/www/index.html
@@ -72,6 +72,7 @@ create, view, and share slideshows of their road trip photos.
 It was presented as a demo at the 2006 JavaOne conference by 
 Richard Bair, Romain Guy, and Joshua Marinacci.
 </p>
+
 <p>We have just released the source code to Aerith under the BSD license! We are
 providing it to developers to learn how these types of effects and 3d integration are done.
 To get Aerith compiling and running please read the <a href="gettingstarted.html">Getting
@@ -86,7 +87,8 @@ be further developed for general use.</p>
 Aerith to compile and run on Mac OS X</a>, including
 how to install all of the dependencies. Thanks to Andrew Serff.</p>
 
-<p>A <a href="http://aerith.keybe.com/jnlp/index.jnlp">JNLP version</a> you can run. Thanks to Kamal El Bedraoui.</p>
+<p>A <a href="http://aerith.keybe.com/jnlp/index.jnlp">JNLP version</a> you can run. 
+Not everything works yet, but it's a start. Thanks to Kamal El Bedraoui.</p>
 
 <h3>Things to be done</h3>
 
