--- a/www/index.html
+++ b/www/index.html
@@ -73,7 +73,13 @@ It was presented as a demo at the 2006 JavaOne conference by
 Richard Bair, Romain Guy, and Joshua Marinacci.
 </p>
 
-<p>We have just released the source code to Aerith under the BSD license! We are
+
+<h3>news</h3>
+
+<p><b>July 7th:</b>  I've removed the twinkle.jar and replaced it with the actual twinkle code
+under src-twinkle. Sorry I missed it the first time around.</p>
+
+<p><b>June 28th:</b> We have just released the source code to Aerith under the BSD license! We are
 providing it to developers to learn how these types of effects and 3d integration are done.
 To get Aerith compiling and running please read the <a href="gettingstarted.html">Getting
 Started</a> guide. This release contains the entire JavaOne demo with the exception of
